--- a/src/app/contact-us/contact-us.html
+++ b/src/app/contact-us/contact-us.html
@@ -6,13 +6,13 @@
 	</div>
 	<div class="row about-row">
 		<div class="col-xs-12 visible-xs heading-border about-fields-small">
-			<a href="#" class="btn sell-equ all-btn">Team</a>
-			<a href="#" class="btn sell-equ all-btn">Board of Directors</a>
-			<a href="#/FAQ" class="btn sell-equ all-btn">FAQ</a>
-			<a href="#/press-releases" class="btn sell-equ all-btn">Press Releases</a>
-			<a href="#/financial-reports" class="btn sell-equ all-btn">Financial Reports</a>
-			<a href="#/annual-meeting" class="btn sell-equ all-btn">2015 Annual Meeting</a>
-			<a href="#/contact-us" class="btn sell-equ all-btn">Contact Us</a>
+			<a ui-sref="hm.team" class="btn sell-equ all-btn">Team</a>
+			<a ui-sref="hm.boardOfDirectors" class="btn sell-equ all-btn">Board of Directors</a>
+			<a ui-sref="hm.faq" class="btn sell-equ all-btn">FAQ</a>
+			<a ui-sref="hm.pressReleases" class="btn sell-equ all-btn">Press Releases</a>
+			<a ui-sref="hm.financialReports" class="btn sell-equ all-btn">Financial Reports</a>
+			<a ui-sref="hm.annualMeeting" class="btn sell-equ all-btn">2015 Annual Meeting</a>
+			<a ui-sref="hm.contactUs" class="btn sell-equ all-btn">Contact Us</a>
 		</div>
 		<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 description-col contact-us-col toppadding">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pull-center">
@@ -73,13 +73,13 @@
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-3 hidden-xs">
 			<ul class="list-group user-list-group about-dropdown">
-					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Team</a></li>
-					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Board of Directors</a></li>
-					<li class="list-group-item noborder" ui-sref="hm.faq"><a class="nopadding" role="menuitem" tabindex="-1" href="#/FAQ">FAQ</a></li>
-					<li class="list-group-item noborder" ui-sref="hm.pressReleases"><a class="nopadding" role="menuitem" tabindex="-1" href="#/press-releases">Press Releases</a></li>
-					<li class="list-group-item noborder" ui-sref="hm.financialReports"><a class="nopadding" role="menuitem" tabindex="-1" href="#/financial-reports">Financial Reports</a></li>
-					<li class="list-group-item noborder" ui-sref="hm.annualMeeting"><a class="nopadding" role="menuitem" tabindex="-1" href="#/annual-meeting">2015 Annual Meeting</a></li>
-					<li class="list-group-item noborder active-about" ui-sref="hm.contactUs"><a class="nopadding" role="menuitem" tabindex="-1" href="#/contact-us">Contact Us</a></li>
+					<li class="list-group-item noborder" ui-sref="hm.team"><a class="nopadding" role="menuitem" tabindex="-1" href="">Team</a></li>
+					<li class="list-group-item noborder" ui-sref="hm.boardOfDirectors"><a class="nopadding" role="menuitem" tabindex="-1" href="">Board of Directors</a></li>
+					<li class="list-group-item noborder" ui-sref="hm.faq"><a class="nopadding" role="menuitem" tabindex="-1" href="">FAQ</a></li>
+					<li class="list-group-item noborder" ui-sref="hm.pressReleases"><a class="nopadding" role="menuitem" tabindex="-1" href="">Press Releases</a></li>
+					<li class="list-group-item noborder" ui-sref="hm.financialReports"><a class="nopadding" role="menuitem" tabindex="-1" href="">Financial Reports</a></li>
+					<li class="list-group-item noborder" ui-sref="hm.annualMeeting"><a class="nopadding" role="menuitem" tabindex="-1" href="">2015 Annual Meeting</a></li>
+					<li class="list-group-item noborder active-about" ui-sref="hm.contactUs"><a class="nopadding" role="menuitem" tabindex="-1" href="">Contact Us</a></li>
       </ul>
 		</div>
 	</div>
