--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -2130,7 +2130,7 @@ button:hover {
 }
 
 .active-about {
-	background-color: #fafafa;
+	background-color: #F5F5F5;
 }
 
 /*contact us*/
@@ -2978,6 +2978,7 @@ td.quantity .ng-invalid-pattern .error{display:block;}
 	margin: 0 15px;
 	font-weight: 400;
 	color: #ffffff;
+	text-decoration: none;
 }
 
 .rent-buy-option .active {
@@ -3120,6 +3121,11 @@ td.quantity .ng-invalid-pattern .error{display:block;}
 	margin: 25px 13px 10px;
 	text-align: center;
 	border: 1px solid #ededed;
+	transition: all 0.6s ease;
+}
+
+.other-equipment:hover {
+	background-color: #fafafa;
 }
 
 .most-bought {
@@ -3129,6 +3135,11 @@ td.quantity .ng-invalid-pattern .error{display:block;}
 .repair-heading {
 	padding-top: 100px;
 	padding-bottom: 100px;
+}
+
+.offers-col {
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
 .repair-heading h3 {
@@ -3147,6 +3158,10 @@ td.quantity .ng-invalid-pattern .error{display:block;}
 	width: 65%;
 	min-width: 250px;
 	max-width: 350px;
+}
+
+.love-image {
+	width: 100%;
 }
 
 .software-img {
@@ -3214,7 +3229,7 @@ td.quantity .ng-invalid-pattern .error{display:block;}
 }
 
 .footer-section .footer-container {
-	padding: 100px 15px 50px;
+	padding: 50px 15px 20px;
 }
 
 .footer-input input {
