--- a/src/app/press-releases/press-releases.html
+++ b/src/app/press-releases/press-releases.html
@@ -28,36 +28,36 @@
                         <td>11/16/2015</td>
                         <td>Release 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a></td>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a></td>
                       </tr>
                       <tr>
                         <td>11/16/2015</td>
                         <td>Release 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a></td>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a></td>
                       </tr>
                       <tr>
                         <td>11/16/2015</td>
                         <td>Release 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a></td>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a></td>
                       </tr>
                       <tr>
                         <td>11/16/2015</td>
                         <td>Release 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a></td>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a></td>
                       </tr>
                       <tr>
                         <td>11/16/2015</td>
                         <td>Release 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a></td>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a></td>
                       </tr><tr>
                         <td>11/16/2015</td>
                         <td>Release 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a></td>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a></td>
                       </tr>
                     </tbody>
                   </table>
