--- a/src/app/financial-reports/financial-reports.html
+++ b/src/app/financial-reports/financial-reports.html
@@ -28,42 +28,42 @@
                         <td>11/16/2015</td>
                         <td>Report 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
                       </tr>
                       <tr>
                         <td>11/16/2015</td>
                         <td>Report 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
                       </tr>
                       <tr>
                         <td>11/16/2015</td>
                         <td>Report 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
                       </tr>
                       <tr>
                         <td>11/16/2015</td>
                         <td>Report 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
                       </tr>
                       <tr>
                         <td>11/16/2015</td>
                         <td>Report 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
                       </tr><tr>
                         <td>11/16/2015</td>
                         <td>Report 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
                       </tr>
                     </tbody>
                   </table>
