--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -32,6 +32,7 @@
 										<li><a   scroll-to="contact" duration="1800">Contact</a></li>
 										<li ng-if="!userObj"><a href="/#/login">Login</a></li>
 										<li ng-if="!userObj"><a href="/#/register">Register</a></li>
+										<li ng-if="userObj"><a href="/#/logout">Logout</a></li>
 									</ul>
 								</div><!-- /.navbar-collapse -->
 							</div><!-- /.container-fluid -->
