sell your equipment changes

--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -218,7 +218,7 @@
 				<h3>Sell your Equipment</h3>
 				<div class="line"></div>
 				<p class="desc-text">When you aren't using your equipment and its getting rust,<br> let it raise money for you by selling it to us. We give best price when you sell<br> equipments to us.</p>
-				<button class="btn all-btn primary-btn sign_mybtn autowidth">Get The Software Now</button>
+				<button class="btn all-btn primary-btn sign_mybtn autowidth" ui-sref="hm.sellEquipment">&nbsp;&nbsp;&nbsp;Sell Now&nbsp;&nbsp;&nbsp;</button>
 			</div>
 		</div>
 	</div>
