--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -48,7 +48,7 @@
               <div class="col-lg-12 welcome_title">Welcome back !<span class="flot-right need_help"><a href="/#/help">Need Help ?</a></span></div>
 
               <div class="col-lg-12">
-                <form role="form" name="loginForm" novalidate valdr-type="User" ng-submit="login()" >
+                <form role="form" name="loginForm" novalidate valdr-type="User">
                   <div class="form-group" valdr-form-group>
                     <input type="hidden" id="credentials" name="credentials" ng-model="loginData.credentials" />
                   </div>
@@ -65,7 +65,7 @@
                     <span class="flot-right need_help"><a href="/#/forgot-password">Forgot Password ?</a></span>
                   </div>
                   <hr>
-                  <button type="submit" ng-click="login()"  class="btn flot-right sign_mybtn all-btn primary-btn">
+                  <button type="submit" ng-submit="login()"  class="btn flot-right sign_mybtn all-btn primary-btn">
                     <span btn-load-indicator="Login:Process">Sign In</span>
                   </button>
                 </form>
