--- a/src/app/search/results.html
+++ b/src/app/search/results.html
@@ -35,8 +35,8 @@
 
 
 
-      <search-result-list-view ng-if="!flags.gridView" id="bottom"></search-result-list-view>
-      <search-result-grid-view ng-if="flags.gridView"></search-result-grid-view>
+      <search-result-list-view ng-if="!flags.gridView" id="bottom" category-type="selection.type"></search-result-list-view>
+      <search-result-grid-view ng-if="flags.gridView" category-type="{{selection.type}}"></search-result-grid-view>
       <load-indicator loading="flags.searchResultLoading" class="search-load-indicator-cont"></load-indicator>
 
       <!--<div class="row" style="margin-top: 10px;text-align: center;" ng-if="searchTags.length && !flags.searchResultLoading">-->
