--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -270,19 +270,19 @@
 </section>
 <!-- software end -->
 <!-- Love start -->
-<div class="container">
-	<div class="row">
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pull-center">
-			<img src="/assets/images/love.jpg" class="love-image">
-		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 most-rented-heading repair-heading">
-			<h3>Love construction industry?</h3>
-			<div class="line"></div>
-			<p class="desc-text">Come join our nationwide team of Entreprenurs as an Independent consultant.</p>
-			<button class="btn all-btn primary-btn sign_mybtn">Join Now</button>
-		</div>
-	</div>
-</div>
+<!--<div class="container">-->
+	<!--<div class="row">-->
+		<!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pull-center">-->
+			<!--<img src="/assets/images/love.jpg" class="love-image">-->
+		<!--</div>-->
+		<!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 most-rented-heading repair-heading">-->
+			<!--<h3>Love construction industry?</h3>-->
+			<!--<div class="line"></div>-->
+			<!--<p class="desc-text">Come join our nationwide team of Entreprenurs as an Independent consultant.</p>-->
+			<!--<button class="btn all-btn primary-btn sign_mybtn">Join Now</button>-->
+		<!--</div>-->
+	<!--</div>-->
+<!--</div>-->
 <!-- Love end -->
 <!-- testimonials start -->
 <!-- <div class="container hidden-xs">
