--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -53,9 +53,9 @@
           <!-- START  Equipment Tab -->
 
           <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
-            <ul class="nav nav-tabs gride-tab root-category">
-              <li ng-click="selectRootCategory(category)" ng-class="{'active': selectedRootCategory.Name == category.Name}" ng-repeat="category in rootCategories | orderBy:'categoryDisplaySortOrder'"><a>{{category.Name}}</a></li>
-            </ul>
+            <!--<ul class="nav nav-tabs gride-tab root-category">-->
+              <!--<li ng-click="selectRootCategory(category)" ng-class="{'active': selectedRootCategory.Name == category.Name}" ng-repeat="category in rootCategories | orderBy:'categoryDisplaySortOrder'"><a data-toggle="tab" href="#equpment">{{category.Name}}</a></li>-->
+            <!--</ul>-->
 
 
           </div>
