--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -13,7 +13,7 @@
           </div>
           <div class="col-lg-12 category_filter1">
             <h5 class="cat_side_title">Category
-              <span class="cat_minus"><a ng-click="flags.categoryCollapse = !flags.categoryCollapse" data-toggle="collapse" data-target="#catename"><i class="fa fa-lg" ng-class="{'fa-minus-square' : !flags.categoryCollapse,'fa-plus-square ' : flags.categoryCollapse }"></i></a></span>
+              <!--<span class="cat_minus"><a ng-click="flags.categoryCollapse = !flags.categoryCollapse" data-toggle="collapse" data-target="#catename"><i class="fa fa-lg" ng-class="{'fa-minus-square' : !flags.categoryCollapse,'fa-plus-square ' : flags.categoryCollapse }"></i></a></span>-->
             </h5>
             <div ng-repeat="subcategories in selectedRootCategory.children" class="root-categories">
               <div>
